# metadataprovider.omniyon

./: .gitignore  CMakeLists.txt  README.md  mktar.sh
debian/: changelog.in  control  copyright
depends/common/rapidjson/: rapidjson.txt
metadataprovider.omniyon/: addon.xml.in  changelog.txt
metadataprovider.omniyon/resources/: settings.xml
src/: client.cpp  client.h
src/utilities/: CurlFile.cpp  CurlFile.h  StringUtils.cpp  StringUtils.h
